# daggerverse

./: .gitignore  .releaserc.json  README.md
aws-ecr/: README.md  dagger.json
aws-ecr/dagger/: pyproject.toml
aws-ecr/dagger/src/main/: __init__.py  main.py
aws-ecr/test/: Dockerfile  README.md  dagger.json
aws-ecr/test/dagger/: pyproject.toml
aws-ecr/test/dagger/src/: main.py
cdk/: README.md  dagger.json  pyproject.toml
cdk/sdk/src/dagger/client/: gen.py
cdk/src/: main.py  main_test.py
echo/: dagger.json  pyproject.toml
echo/src/: main.py
example/: dagger.json
example/dagger/src/: main.py
kics/: README.md  dagger.json
kics/dagger/: pyproject.toml
kics/dagger/src/main/: __init__.py
kics/test/: main.tf
lambda/: README.md  dagger.json
lambda/dagger/: pyproject.toml
lambda/dagger/src/: main.py
lambda/dagger/src/main/: __init__.py  constants.py  main.py
lambda/src/: main.py
lambda/test/lambda-py/: README.md  pyproject.toml
lambda/test/lambda-py/lambda_py/: handler.py
lambda/test/lambda-ts/: README.md  package-lock.json  package.json
lambda/test/lambda-ts/src/: index.ts
pytest/: .gitignore  README.md  dagger.json  pyproject.toml
pytest/src/: main.py
pytest/tests/: test_build_pip_commands.py
sem-rel/: dagger.json  pyproject.toml
sem-rel/src/main/: __init__.py
