[tool.poetry]
name = "main"
version = "0.1"
description = "AWS ECR Dagger module"
authors = ["Mjb141"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
dagger-io = { path = "./sdk", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
